# haskell-workshop

./: .gitignore  Makefile  README.md  cvpartner-api.yml
cvpartner/: README.md  cvpartner.cabal  openapi.yaml
cvpartner/.openapi-generator/: FILES
cvpartner/lib/: CVPartner.hs
cvpartner/lib/CVPartner/: API.hs  Client.hs  Core.hs  Logging.hs  LoggingKatip.hs  LoggingMonadLogger.hs  MimeTypes.hs  Model.hs  ModelLens.hs  Types.hs
cvpartner/lib/CVPartner/API/: ApiDefault.hs
cvpartner/tests/: Instances.hs  PropMime.hs  Test.hs
step2/: CHANGELOG.md  LICENSE  step2.cabal
step2/app/: Main.hs
step3/: step3.cabal
step3/src/: MyList.hs
step3/test/: Main.hs
