cabal-version:      3.0

name:       step3
version:    0.1.0.0

library
    hs-source-dirs:     src
    exposed-modules:    MyList
    ghc-options:        -Wall
    build-depends:
        base ^>=4.17.2.1
    default-language: Haskell2010

Test-Suite step3-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    build-depends:      base >=4.17 && <4.18
                        , test-framework
                        , test-framework-hunit
                        , HUnit
                        , step3
--                        , containers == 0.5.*
    default-language: Haskell2010
